<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BIND</string>

    <!-- Common -->
    <string name="back">뒤로</string>
    <string name="confirm">확인</string>
    <string name="cancel">취소</string>
    <string name="next">다음</string>
    <string name="complete">완료</string>
    <string name="close">닫기</string>
    <string name="save">저장</string>
    <string name="delete">삭제</string>
    <string name="edit">수정</string>
    <string name="search">검색</string>
    <string name="loading">로딩 중...</string>
    <string name="retry">다시 시도</string>
    <string name="error_default">오류가 발생했습니다.</string>
    <string name="error_network">네트워크 연결을 확인해주세요.</string>

    <!-- Auth -->
    <string name="login">로그인</string>
    <string name="logout">로그아웃</string>
    <string name="signup">회원가입</string>
    <string name="sign_up">회원가입</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="password_confirm">비밀번호 확인</string>
    <string name="find_password">비밀번호 찾기</string>
    <string name="email_login">이메일로 로그인</string>
    <string name="kakao_login">카카오로 시작하기</string>
    <string name="google_login">구글로 시작하기</string>
    <string name="apple_login">Apple로 시작하기</string>
    <string name="hint_email">이메일을 입력해주세요.</string>
    <string name="hint_password">비밀번호를 입력해주세요.</string>
    <string name="email_hint">이메일을 입력해주세요</string>
    <string name="password_hint">비밀번호를 입력해주세요</string>
    <string name="password_confirm_hint">비밀번호를 다시 입력해주세요</string>
    <string name="login_failed">로그인에 실패했습니다.</string>
    <string name="signup_success">회원가입이 완료되었습니다.</string>
    <string name="invalid_email">올바른 이메일 형식이 아닙니다.</string>
    <string name="invalid_password">비밀번호는 8자 이상이어야 합니다.</string>
    <string name="password_mismatch">비밀번호가 일치하지 않습니다.</string>
    <string name="social_login_separator">SNS로 시작하기</string>
    <string name="error_email_empty">이메일 주소를 입력해주세요.</string>
    <string name="error_email_invalid">이메일 주소를 확인해주세요.</string>
    <string name="error_password_empty">비밀번호를 입력해주세요.</string>
    <string name="error_password_invalid">비밀번호를 확인해주세요.</string>

    <!-- Profile Setting -->
    <string name="profile_setting">프로필 설정</string>
    <string name="select_region">지역 선택</string>
    <string name="select_instrument">악기 선택</string>
    <string name="select_genre">장르 선택</string>
    <string name="nickname">닉네임</string>
    <string name="nickname_hint">닉네임을 입력해주세요</string>

    <!-- Tab -->
    <string name="tab_home">홈</string>
    <string name="tab_find">발견</string>
    <string name="tab_community">커뮤니티</string>
    <string name="tab_my">마이</string>

    <!-- Home -->
    <string name="recommended_studio">추천 스튜디오</string>
    <string name="nearby_studio">내 주변 스튜디오</string>
    <string name="popular_studio">인기 스튜디오</string>
    <string name="filter">필터</string>
    <string name="region_filter">지역 필터</string>
    <string name="all_regions">전체 지역</string>
    <string name="current_location">현재 위치</string>

    <!-- Reservation -->
    <string name="reservation">예약</string>
    <string name="my_reservation">나의 예약</string>
    <string name="reservation_complete">예약 완료</string>
    <string name="reservation_cancel">예약 취소</string>
    <string name="select_date">날짜 선택</string>
    <string name="select_time">시간 선택</string>
    <string name="select_people">인원 선택</string>

    <!-- Community -->
    <string name="community">커뮤니티</string>
    <string name="write_post">글쓰기</string>
    <string name="comment">댓글</string>
    <string name="like">좋아요</string>
    <string name="hot_posts">인기 게시글</string>
    <string name="all_posts">전체 게시글</string>

    <!-- MyInfo -->
    <string name="my_info">내 정보</string>
    <string name="settings">설정</string>
    <string name="account_settings">계정 설정</string>
    <string name="notification_settings">알림 설정</string>
    <string name="cs_center">고객센터</string>
    <string name="notice">공지사항</string>
    <string name="payment_history">결제 내역</string>
    <string name="version_info">버전 정보</string>
    <string name="my_posts">내 글</string>
    <string name="liked_posts">좋아요한 글</string>
    <string name="my_reviews">내 리뷰</string>
</resources>
